<resources>
    <string name="app_name" translatable="false">FromOneToNine</string>

    <string name="new_game">New game</string>
    <string name="continue_game">Continue</string>
    <string name="statistics">Statistics</string>
    <string name="how_to_play">How to play</string>

    <string name="games_played">Games Played:</string>
    <string name="games_finished">Games Finished:</string>
    <string name="best_time">Best Time:</string>
    <string name="min_pairs_in_finished_game">Minimum Pairs in \nFinished Game:</string>
    <string name="max_pairs_in_finished_game">Maximum Pairs in \nFinished Game:</string>

    <string name="add_new_digits">Add new digits</string>

    <string name="purpose_of_the_game">Purpose of the Game \u2014 remove all digits from the field game. \n\nTo remove the digits they must satisfy the conditions described on the following pages. \n\nIf there are any digits left on the board that do not satisfy the conditions, press the "Add new digits" button.</string>
    <string name="tap_on_pair">Tap on pair of equal digits or those which add up to ten to remove all the digits from the field.</string>
    <string name="remove_vertically_horizontally">You can remove digits in adjacent cells both vertically or horizontally:</string>
    <string name="remove_in_between">You can remove digits with blank cells in between:</string>
    <string name="remove_last_first">You can remove last and first digits in adjacent rows:</string>

    <string name="congratulations_you_won">Congratulations,\n you won!</string>
    <string name="okay">Okay</string>

    <string name="time" translatable="false">%02d:%02d:%02d</string>
</resources>